Fix weird layouting on smaller screens

--- a/src/scss/elements.scss
+++ b/src/scss/elements.scss
@@ -141,17 +141,3 @@ button {
         box-shadow: 0 4px 8px rgba(178, 47, 190, 0.5);
     }
 }
-
-@media (max-width: 760px) {
-    .layout {
-        padding: 1rem;
-
-        >h1 {
-            font-size: 2rem;
-        }
-
-        >p {
-            font-size: 1rem;
-        }
-    }
-}
